:iphone: Fix tags layout on mobile

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -20,11 +20,13 @@
 .tagsWrapper {
   display: flex;
   flex-flow: row wrap;
-  gap: 2rem;
+  gap: 0.5rem 2rem;
+  margin-top: 0.5rem;
 }
 
 p.tag {
-  padding: 0 8px;
   border-radius: 8px;
+  padding: 0 8px;
   border: 1px solid black;
+  font-size: 0.85rem;
 }
